--- a/configure.ac
+++ b/configure.ac
@@ -1,80 +1,64 @@
-## $Rev$ $Date$
-AC_INIT([MOCHA], [0.9], [dchaws+MOCHA@gmail.com])
-AM_INIT_AUTOMAKE([-Wall -Werror foreign])
-AC_LANG(C++)
-AC_PROG_CXX
-AC_CONFIG_HEADERS([config.h])
-AC_CONFIG_FILES([
- Makefile
- src/Makefile
-])
+# Copyright (C) 2009 David Haws.
+# All Rights Reserved.
+# This file is distributed under the Eclipse Common Public License.
 
-m4_pattern_allow([AC_COIN_THIRDPARTY_SUBDIRS])
+## $Id$
+
+# Author:  David Haws           University of Kentucky, 10/26/09 
+
+#############################################################################
+#                       Names and other basic things                        #
+#############################################################################
+
+#AC_PREREQ(2.59)
+
+AC_INIT([MOCHA],[0.9trunk],[http://projects.coin-or.org/MOCHA/newticket])
+
+AC_COPYRIGHT([
+Copyright 2009 David Haws.
+All Rights Reserved.
+This file is part of the open source package MOCHA which is distributed
+under the Eclipse Public License.])
+
+AC_REVISION(0.9)
+
+# List one file in the package so that the configure script can test
+# whether the package is actually there
+AC_CONFIG_SRCDIR(configure.ac)
+
+# Where should everything be installed by default?  Here, we want it
+# to be installed directly in 'bin', 'lib', 'include' subdirectories
+# of the directory where configure is run.  The default would be
+# /usr/local.
+AC_PREFIX_DEFAULT([`pwd`])
+
+#############################################################################
+#              Create the libtool script for the subdirectories             #
+#############################################################################
+
+AC_COIN_CREATE_LIBTOOL
+
+#############################################################################
+#             Check which ThirdParty sources are available                  #
+#############################################################################
 
 AC_COIN_THIRDPARTY_SUBDIRS([Blas],[ThirdParty/Blas],[daxpy.f])
 AC_COIN_THIRDPARTY_SUBDIRS([Lapack],[ThirdParty/Lapack],[LAPACK/SRC/dlarf.f])
 
-AC_ARG_WITH(lapack-prefix,
-[  --with-lapack-prefix=DIR   path to LAPACK],[
-  if test "$withval" != "no"; then
-    CPPFLAGS="${CPPFLAGS} -I$withval/include"
-    LDFLAGS="${LDFLAGS} -L$withval/lib"
-  fi
-])
+#############################################################################
+#                  Check which subprojects are there                        #
+#############################################################################
 
-AC_ARG_WITH(blas-prefix,
-[  --with-blas-prefix=DIR   path to BLAS],[
-  if test "$withval" != "no"; then
-    CPPFLAGS="${CPPFLAGS} -I$withval/include"
-    LDFLAGS="${LDFLAGS} -L$withval/lib"
-  fi
-])
+AC_COIN_MAIN_SUBDIRS(MOCHA)
 
-AC_ARG_WITH([gmp],
-  [AS_HELP_STRING([--with-gmp],
-    [GMP Support. Optionally set to the location of gmp, or no to disable.])],
-  [if test "$withval" != ""; then
-    CPPFLAGS="${CPPFLAGS} -I$withval/include"
-    LDFLAGS="${LDFLAGS} -L$withval/lib"
-  fi
-  ],
-  [with_gmp=check])
+##############################################################################
+#                   Finishing up by writing all the output                   #
+##############################################################################
 
-#LIBGMP=
-AS_IF([test "x$with_gmp" != xno],
-  [AC_CHECK_LIB([gmp], [__gmpz_init], ,
-    [if test "x$with_gmp" != xcheck; then
-       AC_MSG_FAILURE(
-         [--with-gmp was given, but test for gmp failed])
-     fi
-    ])
-   AC_CHECK_LIB([gmpxx], [main], ,
-    [if test "x$with_gmp" != xcheck; then
-       AC_MSG_FAILURE([--with-gmp was given, but test for gmpxx failed])
-     fi
-    ])
-  ])
+# Here list all the files that configure should create (except for the
+# configuration header file)
+AC_CONFIG_FILES([Makefile])
 
+# Finally, we let configure write all the output...
+AC_COIN_FINALIZE
 
-#AC_ARG_WITH(gmp,
-#[  --with-gmp=DIR   path to GMP],[
-#  if test "$withval" != ""; then
-#    CPPFLAGS="${CPPFLAGS} -I$withval/include"
-#    LDFLAGS="${LDFLAGS} -L$withval/lib"
-#  fi
-#  with_gmp=yes
-#],[with_gmp=no])
-
-#AC_CHECK_LIB(gmp, __gmpz_init, ,
-#       [AC_MSG_ERROR([GNU MP not found, see http://gmplib.org/])])
-#AC_CHECK_LIB(gmpxx, __gmpz_init, ,
-#       [AC_MSG_ERROR([GNU MP with cxx compiled not found, see http://gmplib.org/])])
-#AC_CHECK_HEADER([gmpxx.h], ,
-#       [AC_MSG_ERROR([Header gmpxx.h not found])],[AC_INCLUDES_DEFAULT])
-
-AC_CHECK_LIB(lapack, dgesvd_, ,
-       [AC_MSG_ERROR([Lapack not found, see ])])
-AC_CHECK_LIB(blas, main, ,
-       [AC_MSG_ERROR([Blas not found, see ])])
-
-AC_OUTPUT
