--- a/MOCHA/config.h.in
+++ b/MOCHA/config.h.in
@@ -1,5 +1,18 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* If defined, the BLAS Library is available. */
+#undef COIN_HAS_BLAS
+
+/* If defined, the LAPACK Library is available. */
+#undef COIN_HAS_LAPACK
+
+/* Define to dummy `main' function (if any) required to link to the Fortran
+   libraries. */
+#undef F77_DUMMY_MAIN
+
+/* Define if F77 and FC dummy `main' functions are identical. */
+#undef FC_DUMMY_MAIN_EQ_F77
+
 /* Define to 1 if you have the `blas' library (-lblas). */
 #undef HAVE_LIBBLAS
 
