--- a/.gitattributes
+++ b/.gitattributes
@@ -639,8 +639,11 @@ MOCHA/src/tabusearch.cpp -text
 MOCHA/src/testmatrix.cpp -text
 /Makefile.am -text
 /Makefile.in -text
+/acinclude.m4 -text
+/aclocal.m4 -text
 /config.guess -text
 /config.status -text
+/config.sub -text
 /configure -text
 /configure.ac -text
 doxydoc/doxygen.conf -text
